--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
-    "quill": "2.0.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
