--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-view-transitions": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
