--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@blocknote/core": "^0.13.4",
-    "@blocknote/react": "^0.13.4",
-    "@blocknote/shadcn": "^0.13.4",
-    "@radix-ui/react-select": "^2.0.0",
+    "@blocknote/core": "^0.14.0",
+    "@blocknote/mantine": "^0.14.0",
+    "@blocknote/react": "^0.14.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.11",
