--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@blocknote/core": "^0.14.0",
     "@blocknote/mantine": "^0.14.0",
     "@blocknote/react": "^0.14.0",
+    "@clerk/nextjs": "^5.1.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.11",
